Added picture to sweet-potato-pie.html along with a description and ingredients

--- a/recipes/sweet-potato-pie.html
+++ b/recipes/sweet-potato-pie.html
@@ -2,9 +2,27 @@
 <html>
     <head>
         <title>Sweet Potato Pie</title>
-        <meta charset="UTF-8>">
+        <meta charset="UTF-8">
     </head>
     <body>
         <h1>Sweet Potato Pie</h1>
+        <img src="../images/sweet-potato-pie.jpg" width="300" alt="sweet potato pie">
+        
+        <h2>Description</h2>
+        <p>This is a recipe I learned from my grandmother. It's sweet and has a lighter texture than most sweet potato pies.</p>
+        <p>This is a perfect recipe for the holidays.</p>
+
+        <h3>Ingredients</h3>
+        <ol>
+            <li>2 sweet potatoes</li>
+            <li>1/2 a can of sweet condensed milk</li>
+            <li>2 cups of sugar</li>
+            <li>1/2 cup of pure butter</li>
+            <li>2 eggs</li>
+            <li>3 tablespoons of flour</li>
+            <li>2 teaspoons of vanilla extract</li>
+            <li>3 teaspoons of nutmeg</li>
+            <li>2 teaspoons of allspice</li>
+        </ol>
     </body>
 </html>
