--- a/recipes/sweet-potato-pie.html
+++ b/recipes/sweet-potato-pie.html
@@ -10,19 +10,30 @@
         
         <h2>Description</h2>
         <p>This is a recipe I learned from my grandmother. It's sweet and has a lighter texture than most sweet potato pies.</p>
-        <p>This is a perfect recipe for the holidays.</p>
+        <p>Sweet potato pie is the perfect desert for the holidays.</p>
 
         <h3>Ingredients</h3>
         <ol>
             <li>2 sweet potatoes</li>
             <li>1/2 a can of sweet condensed milk</li>
             <li>2 cups of sugar</li>
-            <li>1/2 cup of pure butter</li>
+            <li>1/2 cup of melted pure butter</li>
             <li>2 eggs</li>
             <li>3 tablespoons of flour</li>
             <li>2 teaspoons of vanilla extract</li>
             <li>3 teaspoons of nutmeg</li>
             <li>2 teaspoons of allspice</li>
+            <li>1 unbaked deep dish pie crust</li>
+        </ol>
+
+        <h3>Steps</h3>
+        <ol>
+            <li>Boil the sweet potatoes for 25 minutes. If you can easily poke a fork through them there done.</li>
+            <li>Peel the potatoes and mash them with a pototo masher or mixer.</li>
+            <li>Add the mashed potatoes, milk, sugar, butter, eggs ,flour, vanilla, nutmeg, and allspice together in a bowl and mix them with a mixer.</li>
+            <li>Add the mixture to the pie crust.</li>
+            <li>Bake the pie in a preheated oven for 45 to 50 minutes or until the crust is brown.</li>
+            <li>Enjoy your deliciouse pie!</li>
         </ol>
     </body>
 </html>
