added recipe steps to fried-rice.html

--- a/recipes/fried-rice.html
+++ b/recipes/fried-rice.html
@@ -26,6 +26,21 @@
             <li>Sesame seeds</li>
             <li>1 tablespoon of butter</li>
         </ul>
+
+        <h3>Steps</h3>
+        <ol>
+            <li>Rinse your rice in water before you start boiling it. Add a little salt and boil it for 25 to 30 minutes</li>
+            <li>Fried rice is made with left over rice, so let it cool for 30 minutes at room temperature then cool it in the fridge for 4 hours.</li>
+            <li>Preheat your pan and add a little vegtable oil to it. Then cook your eggs in the pan and scramble them. The eggs will cook quickly, make sure you take the eggs out just before they become curds.</li>
+            <li>Set your cooked eggs aside in a bowl and clean your pan. Preheat the pan and add a little oil to it, then add your shrimp (or protein of choice). Saltay (move them around the pan and flip them) until they lightly brown.</li>
+            <li>Set your shrimp asside with your eggs and clean your pan one more time. Add more oil to the pan and add the mushrooms. Cook the mushroom until they lightly brown.</li>
+            <li>Add your peas(or vegtabale of your choice) to the pan and saltay until there warm.</li>
+            <li>Add your garlic to the pan and saltay for about 30 seconds.</li>
+            <li>Add your rice to the pan along with the oyster sauce and soy sauce. Stir and cook them together for about 3 to 5 minutes.</li>
+            <li>Reduce the heat to low and add a little more vegtable oil, the sesame seeds and butter.</li>
+            <li>Stir everything together a few more times.</li>
+            <li>Congradulations! Enjoy your fried rice.</li>
+        </ol>
         
     </body>
 </html>
