added links to tilapia.html and fried-rice.html to index.html. Corrected spelling mistakes and grammer on fried-rice.html, sweet-potato-pie.html and tilapia.html.

--- a/recipes/fried-rice.html
+++ b/recipes/fried-rice.html
@@ -39,7 +39,7 @@
             <li>Add your rice to the pan along with the oyster sauce and soy sauce. Stir and cook them together for about 3 to 5 minutes.</li>
             <li>Reduce the heat to low and add a little more vegtable oil, the sesame seeds and butter.</li>
             <li>Stir everything together a few more times.</li>
-            <li>Congradulations! Enjoy your fried rice.</li>
+            <li>Congratulations! Enjoy your fried rice.</li>
         </ol>
         
     </body>
