--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/sweet-potato-pie.html">Sweet Potato Pie</a>
+        <ul>
+            <li><a href="recipes/sweet-potato-pie.html">Sweet Potato Pie</a></li>
+            <li><a href="recipes/fried-rice.html">Fried Rice</a></li>
+            <li><a href="recipes/tilapia.html">Baked Tilapia</a></li>
+        </ul>
+        
     </body>
 </html>
