--- a/recipes/tilapia.html
+++ b/recipes/tilapia.html
@@ -26,7 +26,7 @@
             <li>Preheat the oven to 375 degrees F (190 degrees F). Grease a 9x13 inch baking dish.</li>
             <li>Place the tilapia fillets in the bottom of the baking dish and dot with butter. Season with Old Bay seasoning and garlic salt. Top each one with a slice or two of lemon. Arrange the frozen mixed vegetables around the fish, and season lightly with salt and pepper.</li>
             <li>Cover the dish and bake for 25 to 30 minutes in the preheated oven, until vegetables are tender and fish flakes easily with a fork.</li>
-            <li>Enjoy the deliciouse meal.</li>
+            <li>Enjoy the delicious meal.</li>
         </ol>
         
     </body>
