Added styles.css to the project and practiced using basic style rules. the style.css file has been linked to every html file. and the body, h1, h2, li and image elements have been styled.

--- a/recipes/fried-rice.html
+++ b/recipes/fried-rice.html
@@ -3,10 +3,11 @@
     <head>
         <title>Fried Rice</title>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="../css/style.css">
     </head>
     <body>
         <h1>Fried Rice</h1>
-        <img src="../images/fried-rice.jpg" width="300" alt="Fried rice">
+        <img src="../images/fried-rice.jpg" alt="Fried rice">
         
         <h2>Description</h2>
         <p>A quick and easy fried rice recipe. The recipe can be customized to different kinds of ingredients.</p>
