--- a/recipes/tilapia.html
+++ b/recipes/tilapia.html
@@ -3,10 +3,11 @@
     <head>
         <title>Baked Tilapia</title>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="../css/style.css">
     </head>
     <body>
         <h1>Baked Tilapia</h1>
-        <img src="../images/tilapia.jpg" width="300" alt="Baked tilapia">
+        <img src="../images/tilapia.jpg" alt="Baked tilapia">
 
         <h2>Description</h2>
         <p>This easy recipe for tilapia only takes a few minutes to prepare, uses few ingredients, and is flavorful.</p>
