--- a/recipes/sweet-potato-pie.html
+++ b/recipes/sweet-potato-pie.html
@@ -3,10 +3,11 @@
     <head>
         <title>Sweet Potato Pie</title>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="../css/style.css">
     </head>
     <body>
         <h1>Sweet Potato Pie</h1>
-        <img src="../images/sweet-potato-pie.jpg" width="300" alt="sweet potato pie">
+        <img src="../images/sweet-potato-pie.jpg" alt="sweet potato pie">
         
         <h2>Description</h2>
         <p>This is a recipe I learned from my grandmother. It's sweet and has a lighter texture than most sweet potato pies.</p>
